--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
   <title>Factura Electrónica</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="/Factura-Electronica">
+  <base href="/Factura-Electronica/">
   <link rel="icon" type="image/x-icon" href="assets/img/logo.webp">
   <base href="Factura-Electronica/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
