--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/img/logo.webp">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <style>@import"https://fonts.googleapis.com/css2?family=Quicksand&display=swap";*{font-family:Quicksand,sans-serif;margin:0;padding:0}html{font-size:62.5%;background-color:#dee9f1}</style><link rel="stylesheet" href="styles.79d11fb566b8e715.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.79d11fb566b8e715.css"></noscript>
-</head>
+<style>@import"https://fonts.googleapis.com/css2?family=Quicksand&display=swap";*{font-family:Quicksand,sans-serif;margin:0;padding:0}html{font-size:62.5%;background-color:#dee9f1}</style><link rel="stylesheet" href="styles.79d11fb566b8e715.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.79d11fb566b8e715.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.65fa2e23660cda7b.js" type="module"></script><script src="polyfills.2a24a6aaef154e6a.js" type="module"></script><script src="main.eef06869499eea34.js" type="module"></script></body>
+<script src="runtime.65fa2e23660cda7b.js" type="module"></script><script src="polyfills.2a24a6aaef154e6a.js" type="module"></script><script src="main.8a5f8301648938a6.js" type="module"></script></body>
 </html>
